--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,13 @@
   "description": "",
   "dependencies": {
     "@auth/express": "^0.11.0",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "google-auth-library": "^10.3.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
