--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@auth/express": "^0.11.0",
+    "@vendia/serverless-express": "^4.12.6",
     "axios": "^1.12.2",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
