--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "redis": "^5.8.2",
+    "serverless-http": "^4.0.0",
     "uuid": "^11.1.0"
   }
 }
